h3 для имен разраб.+оптимизация изображений

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
         <section>
             <h2>Наша команда</h2>
             <ul>
+
+                <!--Игорь Демьяненко-->
                 <li>
+                    <h3 hidden>Игорь Демьяненко</h3>
                     <figure>
-                        <!--Игорь Демьяненко-->
                         <img src="./img/photo_a.jpg" alt="фото Игорь Демьяненко" width="270" height="260" />
                         <figcaption>
                             <dl>
@@ -96,9 +98,11 @@
                         </figcaption>
                     </figure>
                 </li>
+
+                <!--Ольга Репина-->
                 <li>
+                    <h3 hidden>Ольга Репина</h3>
                     <figure>
-                        <!--Ольга Репина-->
                         <img src="./img/photo_b.jpg" alt="фото Ольга Репина" width="270" height="260" />
                         <figcaption>
                             <dl>
@@ -108,9 +112,11 @@
                         </figcaption>
                     </figure>
                 </li>
+
+                <!--Николай Тарасов-->
                 <li>
+                    <h3 hidden>Николай Тарасов</h3>
                     <figure>
-                        <!--Николай Тарасов-->
                         <img src="./img/photo_c.jpg" alt="фото Николай Тарасов" width="270" height="260" />
                         <figcaption>
                             <dl>
@@ -120,9 +126,11 @@
                         </figcaption>
                     </figure>
                 </li>
+
+                <!--Михаил Ермаков-->
                 <li>
+                    <h3 hidden>Михаил Ермаков</h3>
                     <figure>
-                        <!--Михаил Ермаков-->
                         <img src="./img/photo_d.jpg" alt="фото Михаил Ермаков" width="270" height="260" />
                         <figcaption>
                             <dl>
@@ -132,6 +140,7 @@
                         </figcaption>
                     </figure>
                 </li>
+                
             </ul>
         </section>
     </main>
