--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--Навигация-->
        <nav>
             <!--Логотип-->
-            <a href=""><h2 lang="en">WebStudio</h2></a>
+            <a href=""><h2 lang="en"><span>Web</span><span>Studio</span></h2></a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="#portfolio">Портфолио</a></li>
@@ -133,7 +133,7 @@
     <footer id="contacts">
         <h2 hidden>Адресс, контактная информация</h2>
         <!--Логотип-->
-        <a href=""><h2 lang="en">WebStudio</h2></a>
+        <a href=""><h2 lang="en"><span>Web</span><span>Studio</span></h2></a>
         <address>
             г. Киев, пр-т Леси Украинки, 26
         </address>
